Add aircraft hangar feature with styling and data display

--- a/about.html
+++ b/about.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,13 +14,13 @@
     <link href="css/Nav.css" rel="stylesheet" />
     <link href="css/Footer.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <!-- Use only Font Awesome kit (modern) -->
     <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="topnav">
-        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" />Hypekingfish</a>
+        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" alt="Logo" />Hypekingfish</a>
         <span id="local-time" class="time-display"></span>
         <div id="myLinks">
             <a href="about.html">About</a>
@@ -33,15 +32,18 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
+
     <main>
         <section class="AHeader">
             <h2>About Me</h2>
         </section>
+
         <section class="about">
             <p>
                 Hi! I'm <strong>Hypekingfish</strong> (aka FishnBuckJr), an avid PC gamer and programming enthusiast.
                 When I'm not coding or gaming, you can find me flying in Microsoft Flight Simulator.
             </p>
+
             <div class="about-columns">
                 <div>
                     <h3>Skills & Interests</h3>
@@ -53,6 +55,7 @@
                         <li><strong>Community:</strong> Active member of several online sim and dev communities</li>
                     </ul>
                 </div>
+
                 <div>
                     <h3>Current Projects</h3>
                     <ul>
@@ -61,6 +64,7 @@
                         <li>Programming Projects (<a href="project.html">see Projects page</a>)</li>
                         <li>Open-source tools for simmers and streamers</li>
                     </ul>
+
                     <h3>Fun Facts</h3>
                     <ul>
                         <li><strong>Favorite Aircraft:</strong> Boeing 737-800</li>
@@ -72,6 +76,7 @@
                     </ul>
                 </div>
             </div>
+
             <div class="about-extra">
                 <h3>Why "Hypekingfish"?</h3>
                 <p>
@@ -80,6 +85,7 @@
                     a bit of fun to everything I do!
                 </p>
             </div>
+
             <div class="about-extra">
                 <h3>My Setup</h3>
                 <ul>
@@ -88,14 +94,16 @@
                     <li><strong>Streaming Gear:</strong> Elgato Stream Deck, Blue Yeti mic, dual monitors</li>
                 </ul>
             </div>
+
             <div class="about-extra">
                 <h3>Let's Connect!</h3>
                 <p>
-                    I love meeting new people who share my interests. Feel free to reach out via <a
-                        href="mailto:hypekingfishttv@gmail.com">email</a> or connect on <a
-                        href="https://discord.gg/yourdiscord" target="_blank">Discord</a>!
+                    I love meeting new people who share my interests. Feel free to reach out via
+                    <a href="mailto:hypekingfishttv@gmail.com">email</a> or connect on
+                    <a href="https://discord.gg/yourdiscord" target="_blank">Discord</a>!
                 </p>
             </div>
+
             <div class="about-extra">
                 <h3>Achievements</h3>
                 <ul>
@@ -109,6 +117,7 @@
                     </li>
                 </ul>
             </div>
+
             <div class="about-extra">
                 <h3>What I'm Learning</h3>
                 <ul>
@@ -118,6 +127,7 @@
                     <li>Cloud computing and serverless architecture</li>
                 </ul>
             </div>
+
             <div class="about-membership">
                 <h3>Memberships & Affiliations</h3>
                 <div class="membership-list">
@@ -152,65 +162,71 @@
                 </div>
             </div>
         </section>
-        </section>
-        <footer class="site-footer">
-            <div class="footer-content">
-                <div class="footer-branding">
-                    <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
-                    <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
-                    <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
-                </div>
-                <div class="footer-social">
-                    <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-x-twitter"></i>
-                    </a>
-                    <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-youtube"></i>
-                    </a>
-                    <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-twitch"></i>
-                    </a>
-                    <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-discord"></i>
-                    </a>
-                </div>
-                <div class="footer-support">
-                    <h4>Support the Site</h4>
-                    <a href="https://www.buymeacoffee.com/Hypekingfish"><img
-                            src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=ffc425&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00" /></a>
-                </div>
-                <p class="footer-copyright">
-                    <small>
-                        &copy; <span id="year"></span> <strong>Hypekingfish</strong> All rights reserved.<br />
-                        All content is property of Hypekingfish unless otherwise noted.<br />
-                        VATSIM, vZSE ARTCC, and all related logos are trademarks of their respective owners.<br />
-                        This site is not affiliated with or endorsed by VATSIM or any official aviation authority.<br />
-                        Images and content may not be reproduced without permission.<br />
-                        For inquiries, contact: <a
-                            href="mailto:hypekingfishttv@gmail.com">hypekingfishttv@gmail.com</a><br />
-                        Website code and design by Hypekingfish.<br />
-                        Some images and data may be used under fair use for educational or informational purposes.<br />
-                        If you believe your copyright has been infringed, please contact me for prompt removal or
-                        credit.<br />
-                        No personal data is collected or stored by this site.<br />
-                        Last updated: <span id="last-page-update">2024-06-09</span>
-                    </small>
-                </p>
-            </div>
-        </footer>
-        <script>
-            document.getElementById("last-page-update").textContent = document.lastModified.split(' ')[0];
-            document.getElementById("year").textContent = new Date().getFullYear();
-        </script>
     </main>
+
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-branding">
+                <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
+                <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
+                <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
+            </div>
+
+            <div class="footer-social">
+                <a href="https://github.com/YOUR-USERNAME" aria-label="GitHub" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fab fa-x-twitter"></i>
+                </a>
+                <a href="https://youtube.com/YOUR-CHANNEL" aria-label="YouTube" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fab fa-youtube"></i>
+                </a>
+                <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-twitch"></i>
+                </a>
+                <a href="https://discord.gg/YOUR-DISCORD" aria-label="Discord" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fab fa-discord"></i>
+                </a>
+            </div>
+
+            <div class="footer-support">
+                <h4>Support the Site</h4>
+                <a href="https://www.buymeacoffee.com/Hypekingfish">
+                    <img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=ffc425&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00"
+                        alt="Buy me a coffee button" />
+                </a>
+            </div>
+
+            <p class="footer-copyright">
+                <small>
+                    &copy; <span id="year"></span> <strong>Hypekingfish</strong> All rights reserved.<br />
+                    All content is property of Hypekingfish unless otherwise noted.<br />
+                    VATSIM, vZSE ARTCC, and all related logos are trademarks of their respective owners.<br />
+                    This site is not affiliated with or endorsed by VATSIM or any official aviation authority.<br />
+                    Images and content may not be reproduced without permission.<br />
+                    For inquiries, contact: <a
+                        href="mailto:hypekingfishttv@gmail.com">hypekingfishttv@gmail.com</a><br />
+                    Website code and design by Hypekingfish.<br />
+                    Some images and data may be used under fair use for educational or informational purposes.<br />
+                    If you believe your copyright has been infringed, please contact me for prompt removal or
+                    credit.<br />
+                    No personal data is collected or stored by this site.<br />
+                    Last updated: <span id="last-page-update">2024-06-09</span>
+                </small>
+            </p>
+        </div>
+    </footer>
+
+    <!-- Scripts at bottom for performance -->
+    <script>
+        document.getElementById("last-page-update").textContent = document.lastModified.split(' ')[0];
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
     <script src="scripts/navmenu.js"></script>
     <script src="scripts/time.js"></script>
 </body>
