--- a/flying.html
+++ b/flying.html
@@ -13,6 +13,7 @@
   <link href="style.css" rel="stylesheet" />
   <link href="css/Controller.css" rel="stylesheet" />
   <link href="css/Footer.css" rel="stylesheet" />
+  <link href="css/Hangar.css" rel="stylesheet" />
   <link href="css/Metar.css" rel="stylesheet" />
   <link href="css/Nav.css" rel="stylesheet" />
   <link href="css/Plane.css" rel="stylesheet" />
@@ -221,25 +222,8 @@
       </div>
     </div>
   </section>
-  <section class="Vatsim-Pilot">
-    <h2 class="">My VATSIM Pilot Experience</h2>
-    <div>
-      <div class="gallery-grid">
-        <figure>
-          <img src="/img/Freedom_One.PNG" alt="Southwest Airlines Freedom One" />
-          <figcaption>Southwest Airlines Freedom One</figcaption>
-        </figure>
-        <figure>
-          <img src="/img/IFR_Alaska.PNG" alt="Alaska Airlines Honoring Those Who Served" />
-          <figcaption>Alaska Airlines Honoring Those Who Served</figcaption>
-        </figure>
-        <figure>
-          <img src="/img/GA_Friend.PNG" alt="Carbon Cub group flight" />
-          <figcaption>Carbon Cub group flight</figcaption>
-        </figure>
-      </div>
-    </div>
-  </section>
+  <h1>Aircraft Hangar</h1>
+  <div class="hangar" id="hangar"></div>
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-branding">
@@ -294,6 +278,7 @@
   <script src="scripts/atc.js"></script>
   <script src="scripts/carousel.js"></script>
   <script src="scripts/combined.js"></script>
+  <script src="scripts/hangar.js"></script>
   <script src="scripts/pilot.js"></script>
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
