Remove About Page and Update Navigation Links Across Multiple HTML Files
- Deleted the about.html file and removed references to it in aviation-trivia.html, flying.html, project.html, sb-extension's.html, and streaming.html.
- Updated the Metar.css file to enhance styling and added a dark background for the ticker.
- Re-enabled the Plane-Image.css link in flying.html.
- Updated index.html to include a detailed "About Me" section with skills, projects, and achievements.
- Modified Metar.js to improve weather emoji functionality and adjusted the refresh interval.
- Added a new aircraft entry for "Cessna Citation X" in hangar.js.
- Created a new settings.json file for VSCode configuration.

--- a/flying.html
+++ b/flying.html
@@ -18,7 +18,7 @@
   <link href="css/Nav.css" rel="stylesheet" />
   <link href="css/Plane.css" rel="stylesheet" />
   <link href="css/Testimonials.css" rel="stylesheet" />
-  <!-- <link href="css/Plane-Image.css" rel="stylesheet" /> -->
+  <link href="css/Plane-Image.css" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
@@ -28,7 +28,6 @@
   <div class="topnav">
     <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" />Hypekingfish</a>
     <div id="myLinks">
-      <a href="about.html">About</a>
       <a href="flying.html">Flying</a>
       <a href="project.html">Projects</a>
       <a href="streaming.html">Streaming</a>
@@ -78,11 +77,10 @@
       <div class="row"><span class="label">Temperature:</span> <span id="temperature"></span></div>
       <div class="row"><span class="label">Dewpoint:</span> <span id="dewpoint"></span></div>
       <div class="row"><span class="label">Humidity:</span> <span id="humidity"></span></div>
-      <div class="row"><span class="label">Wind:</span> <span id="wind"></span> <span id="wind-arrow">&#x2191;</span>
-      </div>
+      <div class="row"><span class="label">Wind:</span> <span id="wind"></span> <span id="wind-arrow">&#x2191;</span></div>
       <div class="row"><span class="label">Visibility:</span> <span id="visibility"></span></div>
       <div class="row"><span class="label">Altimeter:</span> <span id="altimeter" title=""></span></div>
-      <!-- <div class="row"><span class="label">Weather:</span> <span id="weather"></span></div> -->
+      <div class="row"><span class="label">Weather:</span> <span id="weather"></span></div>
       <div class="row"><span class="label">Sky:</span> <span id="sky-conditions"></span></div>
       <div class="row"><span class="label">Observation Time:</span> <span id="obs-time"></span></div>
     </div>
@@ -282,9 +280,9 @@
   <script src="scripts/pilot.js"></script>
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
-  <script src="scripts/Modal.js"></script>
+  <!-- <script src="scripts/Modal.js"></script> -->
   <script src="scripts/navmenu.js"></script>
-  <script src="scripts/testimonials.js"></script>
+  <!-- <script src="scripts/testimonials.js"></script> -->
 </body>
 
 </html>
