--- a/flying.html
+++ b/flying.html
@@ -220,8 +220,10 @@
       </div>
     </div>
   </section>
-  <h1>Aircraft Hangar</h1>
-  <div class="hangar" id="hangar"></div>
+  <h1>🛩️ Aircraft Hangar</h1>
+  <input type="text" id="searchPlanes" placeholder="Search aircraft by name or typecode...">
+
+  <div id="hangar"></div>
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-branding">
