Remove Hangar styles and functionality; delete associated CSS and JavaScript files

--- a/flying.html
+++ b/flying.html
@@ -13,7 +13,7 @@
   <link href="style.css" rel="stylesheet" />
   <link href="css/Controller.css" rel="stylesheet" />
   <link href="css/Footer.css" rel="stylesheet" />
-  <link href="css/Hangar.css" rel="stylesheet" />
+  <!-- <link href="css/Hangar.css" rel="stylesheet" /> -->
   <link href="css/Metar.css" rel="stylesheet" />
   <link href="css/Nav.css" rel="stylesheet" />
   <link href="css/Plane.css" rel="stylesheet" />
@@ -221,12 +221,6 @@
       </div>
     </div>
   </section>
-  <h1>🛩️ Aircraft Hangar</h1>
-  <input type="text" id="searchPlanes" placeholder="Search planes...">
-  <div id="hangar"></div>
-  <div id="noPlanes">No planes found 😢</div>
-
-  <div id="hangar"></div>
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-branding">
@@ -281,7 +275,7 @@
   <script src="scripts/atc.js"></script>
   <script src="scripts/carousel.js"></script>
   <script src="scripts/combined.js"></script>
-  <script src="scripts/hangar.js"></script>
+  <!-- <script src="scripts/hangar.js"></script> -->
   <script src="scripts/pilot.js"></script>
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
