Remove Hangar HTML, CSS, and JavaScript files; clean up unused components

--- a/flying.html
+++ b/flying.html
@@ -155,31 +155,7 @@
         it's what keeps me coming back!
       </p>
     </div>
-
-    <!-- Live Controller Stats Section -->
-    <!-- <div id="vatsim-stats" class="vatsim-text">
-      <div class="controller-section">
-        <h2>Controller Ratings & Achievements</h2>
-        <ul class="certifications">
-          <li>
-            ⭐ S1 - Ground Controller -
-            <span class="hours" id="s1-hours">Loading...</span> hours
-          </li>
-          <li>
-            ⭐ S2 - Tower Controller -
-            <span class="hours" id="s2-hours">Loading...</span> hours
-          </li>
-          <li>
-            ⭐ S3 - Approach Controller -
-            <span class="hours" id="s3-hours">Loading...</span> hours
-          </li>
-        </ul>
-        <h3>
-          🎯 Total Controller Hours:
-          <span class="hours" id="controller-hours">Loading...</span>
-        </h3>
-      </div>
-    </div> -->
+    <!-- Testimonials Section -->
     <div class="testimonials">
       <h2>VATSIM Controller Reviews</h2>
       <div class="testimonial">
@@ -222,7 +198,6 @@
       </div>
     </div>
   </section>
-<div id="hangar"></div>
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-branding">
