--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet" />
-    <title>Hypekingfish</title>
-    <link href="style.css" rel="stylesheet" />
-    <link href="css/Nav.css" rel="stylesheet" />
-    <link href="css/Footer.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
-    <!-- Use only Font Awesome kit (modern) -->
-    <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+  <title>Hypekingfish</title>
+  <link href="style.css" rel="stylesheet" />
+  <link href="css/Footer.css" rel="stylesheet" />
+  <link href="css/Nav.css" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
