Refactor Countdown.css and update project.html for improved layout and styling; remove outdated content and enhance responsiveness

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <div class="about-extra">
                 <h3>My Setup</h3>
                 <ul>
-                    <li><strong>PC Specs:</strong> Ryzen 7 CPU, RTX 3070, 32GB RAM</li>
-                    <li><strong>Flight Controls:</strong> Honeycomb Alpha & Bravo, Thrustmaster TPR pedals</li>
-                    <li><strong>Streaming Gear:</strong> Elgato Stream Deck, Blue Yeti mic, dual monitors</li>
+                    <li><strong>PC Specs:</strong> Intel I7-10700F, NVIDIA GeForce RTX 2060, 64GB DDR4 Memory</li>
+                    <!-- <li><strong>Flight Controls:</strong> Honeycomb Alpha & Bravo, Thrustmaster TPR pedals</li> -->
+                    <li><strong>Streaming Gear:</strong> Elgato Stream Deck</li>
                 </ul>
             </div>
 
@@ -106,19 +106,11 @@
                 </p>
             </div>
 
-            <div class="about-extra">
+            <!-- <div class="about-extra">
                 <h3>Achievements</h3>
                 <ul>
-                    <li><strong>VATSIM Certified Controller</strong> – Helped manage virtual airspace for hundreds of
-                        pilots.</li>
-                    <li><strong>Top 1% in MSFS Flight Hours</strong> – Logged over 1,500 hours in Microsoft Flight
-                        Simulator.</li>
-                    <li><strong>Community Contributor</strong> – Developed open-source mods and tools for the sim
-                        community.</li>
-                    <li><strong>Featured Streamer</strong> – Highlighted on Twitch for aviation and simulation content.
-                    </li>
                 </ul>
-            </div>
+            </div> -->
 
             <div class="about-extra">
                 <h3>What I'm Learning</h3>
@@ -128,40 +120,6 @@
                     <li>Video production and motion graphics</li>
                     <li>Cloud computing and serverless architecture</li>
                 </ul>
-            </div>
-
-            <div class="about-membership">
-                <h3>Memberships & Affiliations</h3>
-                <div class="membership-list">
-                    <div class="membership-card">
-                        <img src="img/vatsim_logo.png" alt="VATSIM Logo" />
-                        <div>
-                            <strong>VATSIM Member</strong>
-                            <p>Active virtual pilot and controller since 2019.</p>
-                        </div>
-                    </div>
-                    <div class="membership-card">
-                        <img src="img/twitch_logo.png" alt="Twitch Logo" />
-                        <div>
-                            <strong>Twitch Affiliate</strong>
-                            <p>Streaming aviation and gaming content regularly.</p>
-                        </div>
-                    </div>
-                    <div class="membership-card">
-                        <img src="img/github_logo.png" alt="GitHub Logo" />
-                        <div>
-                            <strong>Open Source Contributor</strong>
-                            <p>Sharing code and collaborating on community projects.</p>
-                        </div>
-                    </div>
-                    <div class="membership-card">
-                        <img src="img/youtube_logo.png" alt="YouTube Logo" />
-                        <div>
-                            <strong>YouTube Creator</strong>
-                            <p>Producing tutorials and flight sim videos.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
