Update personal project details and fun facts; remove outdated learning section

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                 <div>
                     <h3>Current Projects</h3>
                     <ul>
-                        <li>Personal Website Development</li>
-                        <li>Flight Sim Content Creation</li>
+                        <li><strong>This Website</strong></li>
                         <li>Programming Projects (<a href="project.html">see Projects page</a>)</li>
                         <li>Open-source tools for simmers and streamers</li>
                     </ul>
@@ -70,11 +69,10 @@
                     <h3>Fun Facts</h3>
                     <ul>
                         <li><strong>Favorite Aircraft:</strong> Boeing 737-800</li>
-                        <li><strong>Most Hours in Game:</strong> MSFS 2020 (1,500+)</li>
-                        <li><strong>Favorite Programming Snack:</strong> Sour gummy worms</li>
-                        <li><strong>Dream Destination:</strong> Tokyo, Japan</li>
+                        <li><strong>Most Hours in Game:</strong> MSFS 2020 (1,700+)</li>
+                        <li><strong>Favorite Game:</strong> Microsoft Flight Simulator</li>
                         <li><strong>Favorite IDE:</strong> Visual Studio Code</li>
-                        <li><strong>Favorite Coding Music:</strong> Lo-fi beats & synthwave</li>
+                        <li><strong>Favorite Coding Music:</strong> Rock, Country</li>
                     </ul>
                 </div>
             </div>
@@ -104,22 +102,6 @@
                     <a href="mailto:hypekingfishttv@gmail.com">email</a> or connect on
                     <a href="https://discord.gg/yourdiscord" target="_blank">Discord</a>!
                 </p>
-            </div>
-
-            <!-- <div class="about-extra">
-                <h3>Achievements</h3>
-                <ul>
-                </ul>
-            </div> -->
-
-            <div class="about-extra">
-                <h3>What I'm Learning</h3>
-                <ul>
-                    <li>TypeScript and React for modern web development</li>
-                    <li>Advanced flight planning and real-world aviation procedures</li>
-                    <li>Video production and motion graphics</li>
-                    <li>Cloud computing and serverless architecture</li>
-                </ul>
             </div>
         </section>
     </main>
