Refactor About.css by removing unused styles and simplify layout; update index.html to include the new About.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     rel="stylesheet" />
   <title>Hypekingfish</title>
   <link href="style.css" rel="stylesheet" />
+   <link href="css/About.css" rel="stylesheet" />
   <link href="css/Footer.css" rel="stylesheet" />
   <link href="css/Nav.css" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
